// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StockInfo /> should render with the visible inventory and with the store name 1`] = `
<StockInfo
  className=""
  location={
    Object {
      "name": "Test Store",
    }
  }
  showStoreName={true}
>
  <SurroundPortals
    portalName="product.location-stock-info"
    portalProps={
      Object {
        "availabilityText": "demo_availability_text",
        "availabilityTextColor": "green",
        "className": "",
        "location": Object {
          "name": "Test Store",
        },
      }
    }
  >
    <Portal
      name="product.location-stock-info.before"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
    <Portal
      name="product.location-stock-info"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    >
      <span
        className="css-d3hu7n"
      >
        <Inventory
          aboveMaxExtension="++"
          availabilityText="demo_availability_text"
          location={
            Object {
              "name": "Test Store",
            }
          }
          maxNumberVisible={100}
        />
        <StoreName
          displayCapitalized={false}
          name="Test Store"
        >
          <Translate
            className={null}
            params={
              Object {
                "storeName": "Test Store",
              }
            }
            role={null}
            string="product.location_stock_info.pick_up_at"
            transform={null}
          >
            <span
              className={null}
              role={null}
            >
              product.location_stock_info.pick_up_at
            </span>
          </Translate>
        </StoreName>
      </span>
    </Portal>
    <Portal
      name="product.location-stock-info.after"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
  </SurroundPortals>
</StockInfo>
`;

exports[`<StockInfo /> should render without store name 1`] = `
<StockInfo
  className=""
  location={
    Object {
      "name": "Test Store",
    }
  }
  showStoreName={false}
>
  <SurroundPortals
    portalName="product.location-stock-info"
    portalProps={
      Object {
        "availabilityText": "demo_availability_text",
        "availabilityTextColor": "green",
        "className": "",
        "location": Object {
          "name": "Test Store",
        },
      }
    }
  >
    <Portal
      name="product.location-stock-info.before"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
    <Portal
      name="product.location-stock-info"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    >
      <span
        className="css-d3hu7n"
      >
        <Inventory
          aboveMaxExtension="++"
          availabilityText="demo_availability_text"
          location={
            Object {
              "name": "Test Store",
            }
          }
          maxNumberVisible={100}
        />
        <StoreName
          displayCapitalized={false}
          name=""
        />
      </span>
    </Portal>
    <Portal
      name="product.location-stock-info.after"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
  </SurroundPortals>
</StockInfo>
`;

exports[`<StockInfo /> should render without the visible inventory 1`] = `
<StockInfo
  className=""
  location={
    Object {
      "name": "Test Store",
    }
  }
  showStoreName={true}
>
  <SurroundPortals
    portalName="product.location-stock-info"
    portalProps={
      Object {
        "availabilityText": "demo_availability_text",
        "availabilityTextColor": "green",
        "className": "",
        "location": Object {
          "name": "Test Store",
        },
      }
    }
  >
    <Portal
      name="product.location-stock-info.before"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
    <Portal
      name="product.location-stock-info"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    >
      <span
        className="css-d3hu7n"
      >
        <Inventory
          aboveMaxExtension="++"
          availabilityText="demo_availability_text"
          location={
            Object {
              "name": "Test Store",
            }
          }
          maxNumberVisible={100}
        />
        <StoreName
          displayCapitalized={false}
          name="Test Store"
        >
          <Translate
            className={null}
            params={
              Object {
                "storeName": "Test Store",
              }
            }
            role={null}
            string="product.location_stock_info.pick_up_at"
            transform={null}
          >
            <span
              className={null}
              role={null}
            >
              product.location_stock_info.pick_up_at
            </span>
          </Translate>
        </StoreName>
      </span>
    </Portal>
    <Portal
      name="product.location-stock-info.after"
      props={
        Object {
          "availabilityText": "demo_availability_text",
          "availabilityTextColor": "green",
          "className": "",
          "location": Object {
            "name": "Test Store",
          },
        }
      }
    />
  </SurroundPortals>
</StockInfo>
`;
